--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
-    "name": "samshal/emmet-blue",
+    "name": "jiggabyte/emmet-blue",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
             "name": "Samshal",
             "email": "samueladeshina73@gmail.com"
+        },
+        {
+            "name": "Jiggabyte",
+            "email": "jigga.e10@gmail.com"
         }
     ],
     "config":{
@@ -14,7 +18,7 @@
         }
     },
     "require": {
-        "samshal/acl": "dev-master",
+        "jiggabyte/acl": "dev-master",
         "rmccue/requests": "^1.7",
         "phpmailer/phpmailer": "~5.2 || ~6.0"
     },
