--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jiggabyte/emmet-blue",
+    "name": "houseafrica/emmet-blue",
     "type": "library",
     "license": "MIT",
     "authors": [
